支持gradle插件形式引入